[project]
name = "yuren"
version = "0.1.0"
description = "Yuren is a open source Instruction-following LLM based on baichuan."
authors = [
    { name = "Pleisto Inc", email = "engineering@pleisto.com" }
]
license = "Apache-2.0"
dependencies = [
    "transformers>=4.30.1",
    "sentencepiece>=0.1.99",
    "einops>=0.6.1",
    "protobuf==3.*",
    "bitsandbytes>=0.40.0.post4",
    "torch>=2.0.1",
    "accelerate>=0.20.3",
    "setuptools>=68.0.0",
    "scipy>=1.10.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.274",
    "isort>=5.12.0",
    "black>=23.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["apps/*", "libs/*","tools/*"]

[tool.rye.scripts]
prepare-base-model = { cmd = ["python", "-mprepare_base_model"] }
merge-lora = { cmd = ["python", "-mmerge_lora"] }
webui = { cmd = ["python", "-mwebui.app"] }


[tool.ruff]
line-length = 120


[tool.black]
line-length = 120
target-version = ['py310']
preview = true

[tool.isort]
atomic = true
profile = "black"
line_length = 120
py_version = 310
