[project]
name = "yuren"
version = "0.1.0"
description = "Yuren is a open source LLM based on LLAMA2."
authors = [
    { name = "Pleisto Inc", email = "engineering@pleisto.com" }
]
license = "Apache-2.0"
dependencies = [
    "transformers>=4.31.0",
    "sentencepiece>=0.1.99",
    "einops>=0.6.1",
    "protobuf==3.*",
    "bitsandbytes>=0.41.1",
    "torch==2.*",
    "accelerate>=0.21.0",
    "setuptools>=68.0.0",
    "scipy>=1.11.1",
    "transformers_stream_generator>=0.0.4",
    "safetensors>=0.3.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.280",
    "isort>=5.12.0",
    "black>=23.7.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["apps/*", "libs/*","tools/*"]

[tool.rye.scripts]
prepare-base-model = { cmd = ["python", "-mprepare_base_model"] }
merge-lora = { cmd = ["python", "-mmerge_lora"] }
webui = { cmd = ["python", "-mwebui.app"] }


[tool.ruff]
line-length = 120


[tool.black]
line-length = 120
target-version = ['py310']
preview = true

[tool.isort]
atomic = true
profile = "black"
line_length = 120
py_version = 310
