[project]
name = "yuren-trainer"
version = "0.1.0"
description = "Add a short description here"
dependencies = [
    "peft @ git+https://github.com/huggingface/peft.git@13e53fc",
    "datasets>=2.14.4",
    "wandb>=0.15.8",
    "deepspeed>=0.10.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
