[project]
name = "json2parquet"
version = "0.1.0"
description = "Covert huge json dataset to parquet format to avoid bugs in pyarrow."
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
