[project]
name = "prepare-base-model"
version = "0.1.0"
description = "Add a short description here"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
